--- a/app/index.jade
+++ b/app/index.jade
@@ -7,6 +7,6 @@ html
     title Clipmaster 9000
     link(rel='stylesheet', href='style.css', type='text/css')
   body
-    #application
+    #root
     script.
       require('./renderer');
